First benchmarks for generated vectorized code